welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:11: error: missing arguments for method setCouleurBrosse in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
		setCouleurBrosse() = T((litMessage().toInt)%(getMondeHauteur()));
                ^Array2:16: error: missing arguments for method setCouleurBrosse in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
			setCouleurBrosse() = T((j+litMessage.toInt)%(getMondeHauteur()));
                        ^